--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.12",
         "astro": "^5.16.3",
+        "prettier": "^3.7.4",
+        "prettier-plugin-astro": "^0.14.1",
         "tailwindcss": "^4.1.12"
     }
 }
